레이아웃 및 기능 수정

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>jQuery Template</title>
+    <title>0JO'S SHOWCASE</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <script defer src="js/custom.js"></script>
+    <script defer src="js/scroll.js"></script>
 </head>
-<body class="h">
+<body>
     <canvas id="myCanvas"></canvas>
     <section id="intro">
         <h1>
@@ -39,7 +40,54 @@
 
         <div class="menuMo"></div>
     </section>
-    <section></section>
-    <section></section>
+    <section id="self_info">
+        <div class="inner_txt">
+            <div class="left_box">
+                <p>
+                    Analysis-based design to bring
+                    sales. The ultimate goal is
+                    customer success, and I am not
+                    satisfied until this success is
+                    achieved.
+                </p>
+            </div>
+            <div class="right_box">
+                <div class="left_box_pic"></div>
+            </div>
+        </div>
+
+        <div class="slide_box">
+            <div class="upper_content">
+                <p class="upper_txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, ullam doloribus vel ratione facere voluptates.</p>
+            </div>
+            <div class="lower_content">
+                <p class="lower_txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel exercitationem ut, explicabo expedita illum eius repudiandae nobis!</p>
+            </div>
+        </div>
+
+        <div class="self_list">
+            <ul>
+                <li>
+                    <a href="#" class="self_list_btn" data-link="img/company.png">
+                        COMPANY
+                        <span>WEB, 2021</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="self_list_btn" data-link="img/world_tour.png">
+                        WORLD TOUR
+                        <span>WEB, 2021</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="self_list_btn">
+                        COMMIT
+                        <span>WEB, 2021</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section id="contact"></section>
 </body>
 </html>
